<resources>
    <string name="locale_title">Select Language</string>
    <string name="crossing_title">Trail Run</string>
    <string name="crossing_end_sport">Please stop trail run first</string>
    <string name="crossing_in_progress">Trail Running...</string>
    <string name="crossing_max_step_freq_desc">Max Cadence</string>
    <string name="crossing_climb_up">Dist. Gain</string>
    <string name="crossing_climb_down">Elev. Loss</string>
    <string name="crossing_vertical_speed">Vertical Speed</string>
    <string name="crossing_individual_pen_dis">Single Lap Distance</string>
    <string name="crossing_individual_pen_cost_time">Single Lap Time</string>
    <string name="crossing_individual_pen_pace">Single Lap Pace</string>
    <string name="crossing_climb_unit">Feet</string>
    <string name="crossing_vertical_velocity_unit">ft/h</string>
    <string name="crossing_history_detail_total_time">Total Time</string>
    <string name="crossing_history_detail_move_time">Moving Time</string>
    <string name="crossing_history_detail_ave_move_pace">Average Pace</string>
    <string name="crossing_history_detail_ave_move_pace_unit">/mi</string>
    <string name="crossing_history_detail_best_pace">Best Pace</string>
    <string name="crossing_history_detail_ave_move_speed">Average Speed</string>
    <string name="crossing_history_detail_max_speed">Max Speed</string>
    <string name="crossing_history_detail_climb_up">Elev. Gain</string>
    <string name="crossing_history_detail_climb_down">Elev. Loss</string>
    <string name="crossing_history_detail_absolute_altitude">Altitude</string>
    <string name="crossing_history_detail_high_altitude">Max Altitude</string>
    <string name="crossing_history_detail_low_altitude">Min Altitude</string>
    <string name="crossing_history_detail_ave_altitude">Average Altitude</string>
    <string name="crossing_history_detail_altituede_graph_desc">Altitude (feet)</string>
    <string name="crossing_history_detail_individual_km">%1$s mile for a single loop</string>
    <string name="crossing_setting_unit">Mile</string>
    <string name="crossing_settings_item_title_individual_remind">Single Lap Distance</string>
    <string name="crossing_settings_item_value_individual">%1s kms</string>
    <string name="crossing_remind_target_individual_title">Lap %1d</string>
    <string name="crossing_remind_target_individual_cost_time">Elapsed Time</string>
    <string name="crossing_remind_target_individual_pace">Pace</string>
    <string name="agps_time_out">AGPS has expired. GPS searching will be slow. Please connect the Amazfit Watch App to update it。</string>
    <string name="safe_hearate_remind_content">When above %1d</string>
    <string name="settings_safe_heart_rate_hint">(safe heart rate)</string>
    <string name="settings_safe_heart_rate_unit">bpm</string>
    <string name="elliptical">Elliptical</string>
    <string name="elliptical_in_progress">Elliptical in progress</string>
    <string name="person_achive">Personal Best</string>
    <string name="achive_share_sport">Share Activity</string>
    <string name="achive_get_record_time">17-05-25获得</string>
    <string name="achive_person_record">Personal Record</string>
    <string name="remind_target_calorie_title">Reached set calorie goal</string>
    <string name="remind_target_time_title">Reached set time goal</string>
    <string name="remind_target_calorie_title_format">kCal</string>
    <string name="remind_target_time_h_unit">h</string>
    <string name="remind_target_time_m_unit">m</string>
    <string name="remind_target_time_default_value">00</string>
    <string name="no_altitude_hint">Altitude data not detected</string>
    <string name="no_heartrate_data_hint">Heart rate data not detected</string>
    <string name="no_chart_data_hint">Not Available</string>
    <string name="not_speed_data">Speed is n/a</string>
    <string name="not_pace_data">Pace is n/a</string>
    <string name="not_step_freq_data">Cadence is n/a</string>
    <string name="not_stroke_speed_data">Stroke data is n/a</string>
    <string name="not_cadence_data">Cadence is n/a</string>
    <string name="stroke_speed_curve_title">Stroke Rate (SPM)</string>
    <string name="stroke_unit">strokes</string>
    <string name="cadence_curve_title">Cadence(times/min)</string>
    <string name="swim_trips_complete">Swim %1$d trips</string>
    <string name="gps_search_tips">A 15-min warm-up exercise before the run helps prevent injuries.</string>
    <string name="gps_search_swim_tips">Touch screen will be locked</string>
    <string name="gps_searching">Searching</string>
    <string name="gps_search_success">GPS available</string>
    <string name="gps_search_failed_title">GPS not available</string>
    <string name="gps_search_failed_content">Cannot acquire GPS satellites, please try again in an open space</string>
    <string name="gps_search_success_title">GPS available now</string>
    <string name="gps_search_success_content">"Let's go ahead and start the activity!"</string>
    <string name="gps_search_timeout_title">GPS has expired</string>
    <string name="gps_search_timeout_content">AGPS has expired. GPS searching will be slow. Please connect the Amazfit Watch App to update it.</string>
    <string name="gps_notify_success">GPS available</string>
    <string name="gps_notify_loss">Lost GPS signal</string>
    <string name="gps_search_time_out_content">GPS was turned off due to inactivity</string>
    <string name="detail_route_title">Route</string>
    <string name="detail_route_total_dis">Total Distance</string>
    <string name="detail_route_detail_lap_title">Lap Details</string>
    <string name="detail_route_detail_manual_lap_title">Key Laps</string>
    <string name="detail_route_detail_auto_lap_title">Auto Laps</string>
    <string name="detail_lap_num">Lap</string>
    <string name="detail_lap_time">Elapsed Time</string>
    <string name="detail_total_distance_desc">Total Distance</string>
    <string name="detail_lap_dis">Distance</string>
    <string name="detail_lap_avg_pace">Average Pace</string>
    <string name="detail_curve_graph">Graph</string>
    <string name="battery_support_sport">in GPS mode</string>
    <string name="battery_continue_distance_unit"> km</string>
    <string name="battery_continue_imperial_distance_unit"> mi</string>
    <string name="battery_continue_time_unit"> hrs</string>
    <string name="battery_split"> / </string>
    <string name="suggest_reset_time">Time to full recovery %1$s hrs</string>
    <string name="remain_time_recovery"><Data>Time to full recovery&amp;nbsp;&lt;font color=#00ff00>&lt;b>%1$s&lt;/b>&lt;/font>&amp;nbsp; h</Data></string>
    <string name="more_sport_tint">More</string>
    <string name="zh_space">　</string>
    <string name="en_space"> </string>
    <string name="picker_title_auto_pause">Pace(m:s/%1$s)</string>
    <string name="picker_title_auto_pause_speed">Speed(%1$s/h)</string>
    <string name="picker_title_target_dis">Distance(%1$s)</string>
    <string name="picker_title_target_time">Elapsed time(h/m)</string>
    <string name="picker_title_target_calorie">Calories(kCal)</string>
    <string name="picker_title_target_te">Target TE</string>
    <string name="picker_title_target_heart_rate">Heart-rate(bpm)</string>
    <string name="picker_title_auto_lap">Auto Lap(%1$s)</string>
    <string name="picker_title_swim_length">Pool Size(%1$s)</string>
    <string name="picker_title_target_trips">Target Trips</string>
    <string name="picker_title_fix_dis">Calibrate(%1$s)</string>
    <string name="picker_sub_title_te_one">(Improving)</string>
    <string name="picker_sub_title_te_two">(Improving)</string>
    <string name="picker_sub_title_te_three">(Improving)</string>
    <string name="picker_sub_title_te_four">(Improving)</string>
    <string name="picker_heart_region_content">zone %1$d</string>
    <string name="settings_sport_target">Training Target</string>
    <string name="settings_sport_remind">Alerts</string>
    <string name="settings_sport_control">More Settings</string>
    <string name="settings_sport_auto_pause">Auto Pause</string>
    <string name="settings_sport_auto_pause_triathlon">Auto-pause</string>
    <string name="settings_sport_cadence_link">Accessories</string>
    <string name="settings_sport_route">Course Import</string>
    <string name="settings_sport_items">Data Screen</string>
    <string name="settings_sport_3d_data">3D Data</string>
    <string name="settings_sport_real_graph">Realtime Stats</string>
    <string name="settings_sport_auto_section">Auto Lap</string>
    <string name="settings_sport_lap">Lap</string>
    <string name="settings_sport_lap_auto">Auto Lap</string>
    <string name="settings_sport_lap_auto_remind">Auto Lap Alert</string>
    <string name="settings_sport_target_TE">Target TE</string>
    <string name="settings_sport_swim_length">Pool Size</string>
    <string name="settings_sport_swim_title">Pool Size(m)</string>
    <string name="settings_sport_swim_tips">The watch will count laps based on pool size</string>
    <string name="settings_sport_measure_heart">PPG on/off</string>
    <string name="settings_sport_rt_guide">Guidance</string>
    <string name="settings_sport_auto_pace_title">Pause at pace</string>
    <string name="settings_sport_auto_speed_title">Pause at speed</string>
    <string name="settings_content_stand_still">Standing Still</string>
    <string name="settings_sport_bg_type">BG Color</string>
    <string name="settings_sport_bg_type_normal">Black</string>
    <string name="settings_sport_bg_type_white">White</string>
    <string name="setting_on">On</string>
    <string name="setting_off">Off</string>
    <string name="settings_item_title_target_calorie_remind">Calorie Goal</string>
    <string name="settings_item_value_target_calorie">%1$dkCal</string>
    <string name="settings_item_value_swim_length">%1$sm</string>
    <string name="settings_item_value_swim_length_imperial">%1$sft</string>
    <string name="settings_cal_unit">kCal</string>
    <string name="setting_auto_pause_speed">&lt;%1$s km/h</string>
    <string name="setting_auto_pause_pace">when slower than %1$s</string>
    <string name="setting_no_set_target">Not Set</string>
    <string name="sport_settings_by_te">Taining Effect</string>
    <string name="hitory_rest_command">Time to full recovery </string>
    <string name="hitory_rest_command_time"> hrs</string>
    <string name="history_start_sport_tips">Start an activity now!</string>
    <string name="sport_main_recovery_title">Recovery Time</string>
    <string name="hill_default_percent">%1$d%%</string>
    <string name="export_route_trail">Export</string>
    <string name="start_mix_sport">Start multisport activity</string>
    <string name="start_single_sport">Start Activity</string>
    <string name="pause_sport">Pause Activity</string>
    <string name="continue_sport">Continue Activity</string>
    <string name="stop_sport">Stop Activity</string>
    <string name="interval_train_tips_title">Alerts will be off by default during internvals</string>
    <string name="interval_train_tips_content">(Except for HR alterts)</string>
    <string name="interval_confirm">OK</string>
    <string name="confirm">OK</string>
    <string name="sport_app_name">Sports</string>
    <string name="running_pace_unit">/mi</string>
    <string name="running_realtime_trail_desc">GPS Route</string>
    <string name="default_pace_value">"00'00\""</string>
    <string name="sport_pause_heart_shown">--</string>
    <string name="km_metric">km</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="hint_rolling">Exporting, please wait for a while ...</string>
    <string name="hint_success_exported_title">"Exported to GPX file 
 successfully"</string>
    <string name="hint_where">"The gpx file has been placed in 
 folder '/sdcard/gpxdata'.
 You can copy it to a computer through USB."</string>
</resources>