<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/sport_history_item_title_bg" android:layout_width="fill_parent" android:layout_height="@dimen/item_height" android:layout_marginTop="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.common.widget.HmTextView android:textSize="@dimen/item_handler_circle_count_font_size" android:id="@id/lap_num" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/detail_lap_num" android:layout_weight="2.0" style="@style/sport_text_style" />
    <com.huami.watch.common.widget.HmTextView android:textSize="@dimen/item_handler_circle_count_font_size" android:id="@id/lap_time" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/detail_lap_time" android:layout_weight="3.0" style="@style/sport_text_style" />
    <com.huami.watch.common.widget.HmTextView android:textSize="@dimen/item_handler_circle_count_font_size" android:id="@id/lap_dis" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/detail_lap_dis" android:layout_weight="2.0" style="@style/sport_text_style" />
    <com.huami.watch.common.widget.HmTextView android:textSize="@dimen/item_handler_circle_count_font_size" android:id="@id/lap_pace" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/detail_lap_avg_pace" android:layout_weight="3.0" style="@style/sport_text_style" />
</LinearLayout>