<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/default_background_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.common.widget.HmImageView android:layout_gravity="center_horizontal" android:background="@drawable/sport_medal_02_grey" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="5.0dip" />
    <com.huami.watch.common.widget.HmTextView android:textSize="20.0sp" android:textColor="@color/default_font_color_white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/achive_share_sport" />
    <com.huami.watch.common.widget.HmTextView android:textColor="@color/default_font_color_white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/achive_get_record_time" />
    <com.huami.watch.common.widget.HmTextView android:textColor="@color/default_font_color_white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/person_achive" />
    <View android:textColor="@color/default_font_color_white" android:background="@color/default_font_color_white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
    <com.huami.watch.common.widget.HmTextView android:textColor="@color/default_font_color_white" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:background="@drawable/button_ground_gray" android:padding="5.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/achive_person_record" />
</LinearLayout>