<?xml version="1.0" encoding="utf-8"?>
<com.huami.watch.common.widget.HmRelativeLayout android:orientation="vertical" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.common.widget.HmTextView android:textStyle="bold" android:id="@id/desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/crossing_history_detail_best_pace" android:layout_alignParentTop="true" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
    <com.huami.watch.newsport.ui.view.NumberTextView android:id="@id/number_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_pace_value" android:layout_below="@id/desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
    <com.huami.watch.common.widget.HmTextView android:id="@id/unit_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_pace_unit" android:layout_alignBaseline="@id/number_text_view" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/number_text_view" style="@style/sport_history_item_unit" />
</com.huami.watch.common.widget.HmRelativeLayout>