<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.newsport.ui.view.SportMainSettingFace android:id="@id/main_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/linearLayout" android:background="@drawable/sport_menu_top_bg" android:layout_width="fill_parent" android:layout_height="80.0dip">
        <RelativeLayout android:gravity="center" android:background="@color/default_background_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="3.0dip">
            <FrameLayout android:id="@id/battery_icon_container" android:paddingTop="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/battery_icon" android:layout_width="16.0dip" android:layout_height="16.0dip" />
            </FrameLayout>
            <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textStyle="bold" android:id="@id/battery_percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/hill_default_percent" android:layout_toRightOf="@id/battery_icon_container" style="@style/sport_text_style" />
            <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:text="@string/battery_support_sport" android:layout_toRightOf="@id/battery_percent" android:layout_centerVertical="true" style="@style/sport_text_style" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/default_background_black" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.huami.watch.newsport.ui.view.NumberTextView android:textSize="16.0sp" android:textColor="#ff25ff33" android:gravity="center" android:id="@id/battery_continue_time" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/sport_num_text_style" />
            <com.huami.watch.common.widget.HmTextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_continue_time_unit" style="@style/sport_text_style" />
            <com.huami.watch.common.widget.HmTextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/battery_split" style="@style/sport_text_style" />
            <com.huami.watch.newsport.ui.view.NumberTextView android:textSize="16.0sp" android:textColor="#ff25ff33" android:gravity="center" android:id="@id/battery_distance_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.huami.watch.common.widget.HmTextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/dis_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_continue_distance_unit" style="@style/sport_text_style" />
        </LinearLayout>
        <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textColor="#ffffb100" android:gravity="center_horizontal" android:id="@id/suggest_reset_time" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/suggest_reset_time" style="@style/sport_text_style" />
    </LinearLayout>
</RelativeLayout>